css-header-logo-and-search-bar

--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,4 +1,9 @@
 .wrapper {
+    --search-height: 46px;
+    --search-top-spacer: 9px;
+    --search-border-radius: 92px;
+    --search-button-width: 52px;
+
     width: 100%;
     height: var(--default-layout-header-height, 60px);
     box-shadow: 0px 1px 1px rgb(0, 0, 0, 12%);
@@ -9,4 +14,80 @@
 .inner {
     width: var(--default-layout-width);
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+}
+
+.search {
+    position: relative;
+    width: 361px;
+    height: var(--search-height);
+    padding-left: 16px;
+    border: 1.5px solid transparent;
+    border-radius: var(--search-border-radius);
+    background-color: rgba(22, 24, 25, 0.06);
+    display: flex;
+
+    input {
+        flex: 1;
+        color: #828282;
+        caret-color: var(--primary-color);
+        padding: 12px;
+        font-size: 1.6rem;
+        font-weight: 400;
+        background-color: transparent;
+
+        &:not(:placeholder-shown) ~ .search-button {
+            color: rgba(22, 24, 25, 0.75);
+        }
+    }
+
+    &:focus-within {
+        border: 1.5px solid rgba(22, 24, 25, 0.2);
+    }
+
+    &::after {
+        content: '';
+        position: absolute;
+        top: var(--search-top-spacer);
+        right: var(--search-button-width);
+        width: 1px;
+        height: calc(var(--search-height) - (var(--search-top-spacer) * 2));
+        background-color: rgba(22, 24, 25, 0.12);
+    }
+}
+
+.search-clear,
+.loading {
+    position: absolute;
+    top: 50%;
+    right: calc(var(--search-button-width) + var(--search-button-width) / 3);
+    transform: translateY(-50%);
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: rgba(22, 24, 25, 0.34);
+    cursor: pointer;
+}
+
+.search-button {
+    width: 53px;
+    height: 100%;
+    font-size: 2rem;
+    font-weight: 400;
+    color: rgba(22, 24, 25, 0.34);
+    border-top-right-radius: var(--search-border-radius);
+    border-bottom-right-radius: var(--search-border-radius);
+
+    &:hover {
+        cursor: pointer;
+        background-color: rgba(22, 24, 25, 0.03);
+    }
+
+    &:active {
+        background-color: rgba(22, 24, 25, 0.06);
+    }
 }
