--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;700&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
 
 :root {
+    --primary-color: #e74e4e;
+    --black-color: #000000;
+    --text-color: #333333;
+
     --default-layout-width: 1150px;
     --default-layout-header-height: 60px;
 }
@@ -21,5 +25,18 @@ body {
     font-family: 'Mulish', sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
+    color: var(--text-color);
     text-rendering: optimizeSpeed;
+}
+
+button,
+input,
+[tabindex] {
+    outline: none;
+    border: none;
+}
+
+a[href] {
+    color: var(--text-color);
+    text-decoration: none;
 }
