--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,8 +3,9 @@
 
 :root {
     --primary-color: #e74e4e;
-    --black-color: #000000;
-    --text-color: #333333;
+    --white-color: rgb(255, 255, 255);
+    --black-color: rgb(0, 0, 0);
+    --text-color: rgb(51, 51, 51);
 
     --default-layout-width: 1150px;
     --default-layout-header-height: 60px;
