build-option-menu

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -9,6 +9,7 @@
 
     --default-layout-width: 1150px;
     --default-layout-header-height: 60px;
+    --default-layout-horizontal-spacer: 24px;
 }
 
 * {
@@ -23,7 +24,6 @@ html {
 
 body {
     font-family: 'Comfortaa', cursive;
-    font-family: 'Mulish', sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
     color: var(--text-color);
@@ -35,6 +35,7 @@ input,
 [tabindex] {
     outline: none;
     border: none;
+    font-family: inherit;
 }
 
 a[href] {
