--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -22,6 +22,11 @@
     }
 }
 
+.icon {
+    display: inline-block;
+    width: 24px;
+    text-align: center;
+}
 .title + .icon,
 .icon + .title {
     margin: 0 0 0 8px;
