--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -8,12 +8,14 @@
     height: var(--default-layout-header-height, 60px);
     box-shadow: 0px 1px 1px rgb(0, 0, 0, 12%);
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 
 .inner {
     width: var(--default-layout-width);
     height: 100%;
+    padding: 0 var(--default-layout-horizontal-spacer);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -100,4 +102,17 @@
     &:active {
         background-color: rgba(22, 24, 25, 0.06);
     }
+}
+
+.actions {
+    display: flex;
+    align-items: center;
+}
+
+.selection-icon {
+    margin: 0 0 0 28px;
+    padding: 8px;
+    font-size: 2rem;
+    background-color: transparent;
+    cursor: pointer;
 }
