--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,7 +5,7 @@
     --primary-color: #e74e4e;
     --white-color: rgb(255, 255, 255);
     --black-color: rgb(0, 0, 0);
-    --text-color: rgb(51, 51, 51);
+    --text-color: rgb(22, 24, 35);
 
     --default-layout-width: 1150px;
     --default-layout-header-height: 60px;
@@ -36,9 +36,29 @@ input,
     outline: none;
     border: none;
     font-family: inherit;
+    background-color: transparent;
 }
 
 a[href] {
     color: var(--text-color);
     text-decoration: none;
+}
+
+// ---------- Customize Tippy Tooltip --------- //
+body {
+    .tippy-box {
+        font-size: 1.6rem;
+        font-weight: 600;
+        line-height: 22px;
+        border-radius: 8px;
+        background-color: rgba(82, 82, 82, 0.92);
+    }
+
+    .tippy-arrow {
+        color: #333;
+    }
+
+    .tippy-content {
+        padding: 8px 10px;
+    }
 }
