--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -6,10 +6,18 @@
 
     width: 100%;
     height: var(--default-layout-header-height, 60px);
-    box-shadow: 0px 1px 1px rgb(0, 0, 0, 12%);
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+
     display: flex;
     align-items: center;
     justify-content: center;
+
+    box-shadow: 0px 1px 1px rgb(0, 0, 0, 12%);
+    background-color: var(--white-color);
 }
 
 .inner {
@@ -19,6 +27,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.logo-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .search {
