--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -11,6 +11,10 @@
     padding: 8px 0;
 }
 
+.selection-content {
+    overflow-y: auto;
+}
+
 // ---------- Popper Menu For More Selection Icon -------- //
 .menu-item {
     width: 100%;
@@ -32,6 +36,7 @@
     height: 50px;
     margin: -8px 0 0 0;
     position: relative;
+    flex-shrink: 0;
 }
 
 .button-back {
