--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -5,4 +5,6 @@
     border-radius: 8px;
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 2px 12px rgb(0, 0, 0, 12%);
+    display: flex;
+    flex-direction: column;
 }
