--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -12,7 +12,7 @@
         flex: 1;
         color: #828282;
         caret-color: var(--primary-color);
-        padding: 12px;
+        padding: 12px 40px 12px 12px;
         font-size: 1.6rem;
         font-weight: 400;
         background-color: transparent;
